--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Minecraft</title>
     </head>
     <body>
+        <div id="crosshair"></div>
         <script src="https://unpkg.com/three@0.160.0/build/three.min.js"></script>
         <script src="script.js"></script>
     </body>
