--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
     <head>
         <link rel="stylesheet" href="style.css">
-        <title>Minecraft</title>
+        <title>Voxel World</title>
     </head>
     <body>
         <div id="crosshair"></div>
+        <div id="coords">Generating Terrain</div>
         <script src="https://unpkg.com/three@0.160.0/build/three.min.js"></script>
         <script src="script.js"></script>
     </body>
